[gd_scene load_steps=4 format=3 uid="uid://v61d36v6xllc"]

[ext_resource type="Script" path="res://Utility/item_option.gd" id="1_o2foa"]
[ext_resource type="FontFile" uid="uid://bkbhtbio65dg5" path="res://PUBLIC/GrapeSoda.ttf" id="2_fjjil"]
[ext_resource type="Texture2D" uid="uid://cpvh3u6kt8fy5" path="res://assets/UI_Sprites/Border/Item_Border.png" id="2_ssd78"]

[node name="ItemOption" type="Panel"]
z_index = 2
custom_minimum_size = Vector2(180, 50)
anchors_preset = -1
anchor_right = 0.281
anchor_bottom = 0.139
offset_right = 0.160004
offset_bottom = -0.0400009
script = ExtResource("1_o2foa")

[node name="ColorRect" type="TextureRect" parent="."]
layout_mode = 0
offset_left = 2.0
offset_top = 2.0
offset_right = 26.0
offset_bottom = 26.0
texture = ExtResource("2_ssd78")

[node name="ColorRect2" type="ColorRect" parent="ColorRect"]
z_as_relative = false
layout_mode = 0
offset_left = 2.0
offset_top = 2.0
offset_right = 42.0
offset_bottom = 42.0
scale = Vector2(0.689876, 0.701603)
color = Color(0.0266328, 0.191122, 0.123913, 1)

[node name="ItemIcon" type="TextureRect" parent="ColorRect"]
layout_mode = 0
offset_right = 32.0
offset_bottom = 32.0
scale = Vector2(1.00358, 1)

[node name="lbl_level" type="Label" parent="."]
layout_mode = 0
offset_left = 130.0
offset_top = 3.0
offset_right = 170.0
offset_bottom = 26.0
mouse_filter = 1
theme_override_fonts/font = ExtResource("2_fjjil")
theme_override_font_sizes/font_size = 16
text = "level:1"

[node name="lbl_description" type="Label" parent="."]
layout_mode = 0
offset_left = 39.0
offset_top = 24.0
offset_right = 201.0
offset_bottom = 45.0
scale = Vector2(1.09301, 1.12281)
mouse_filter = 1
theme_override_font_sizes/font_size = 8
text = "Description of Item"
autowrap_mode = 3

[node name="lbl_name" type="Label" parent="."]
layout_mode = 0
offset_left = 39.0
offset_top = 1.0
offset_right = 86.0
offset_bottom = 24.0
mouse_filter = 1
text = "Name"

[node name="Button" type="Button" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
scale = Vector2(0.993522, 1.00809)
theme_override_colors/icon_normal_color = Color(0, 0, 0, 0)
flat = true

[connection signal="pressed" from="Button" to="." method="_on_button_pressed"]
